--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,11 +1,15 @@
-# Jenkins Dockerfile
-FROM jenkins/jenkins:lts
+FROM jenkins/jenkins:2.452.3-jdk17
 
 USER root
 
-# Install Python, Docker CLI, and Git
+# Install dependencies and Docker CLI
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip python3-venv docker.io git && \
+    apt-get install -y lsb-release && \
+    curl -fsSLo /usr/share/keyrings/docker-archive-keyring.asc \
+    https://download.docker.com/linux/debian/gpg && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.asc] https://download.docker.com/linux/debian $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list && \
+    apt-get update && \
+    apt-get install -y docker-ce-cli python3 python3-pip python3-venv git && \
     ln -s /usr/bin/python3 /usr/bin/python && \
     rm -rf /var/lib/apt/lists/*
 
@@ -16,7 +20,6 @@ RUN curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-c
 # Add Jenkins user to Docker group (without creating it)
 RUN usermod -aG docker jenkins
 
-
 # Configure Git
 ARG GIT_USER_NAME
 ARG GIT_USER_EMAIL
@@ -25,3 +28,6 @@ RUN git config --global user.name "${GIT_USER_NAME}" && \
     git config --global user.email "${GIT_USER_EMAIL}"
 
 USER jenkins
+
+# Install Jenkins plugins
+RUN jenkins-plugin-cli --plugins "blueocean docker-workflow"
